--- a/styles/dropdown.scss
+++ b/styles/dropdown.scss
@@ -118,6 +118,10 @@ $predelay: 0;
   display: inline-block;
   position: relative;
   vertical-align: middle;
+
+  a {
+      text-decoration: none;
+  }
   
   &.dropdown-block {
     display: block;
