--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -35,7 +35,7 @@ $sidebar-width: 280px;
 $main-font: Inter;
 $sec-font: Inter;
 
-$font-size: 12pt;
+$font-size: 20px;
 $line-height: 1.5em;
 
 $gutter-a: 10px;
