--- a/views/partials/login.html
+++ b/views/partials/login.html
@@ -1,17 +1,11 @@
 <header id="landing-header" class="header" v-cloak v-if="(active_view == 'login' || active_view == 'signup' || active_view == 'password-reset' || active_view == 'password-confirm')">
   <div class="header-left">
-    <a class="btn btn-transparent btn-nude" href="/"><img src="/images/sd5-logo.svg" width="190"></a>
+    <a class="btn btn-transparent btn-nude" href="/"><img src="/images/sd6-logo-black.svg" width="190"></a>
   </div>
 
   <div class="header-right pull-right">
-    <span class="btn-group dark round">
-      {% if (locale != "de") %}<a href="/t/de?r={{active_view}}" class="btn btn-transparent btn-md">Deutsch</a>{% endif %}
-      {% if (locale != "en") %}<a href="/t/en?r={{active_view}}" class="btn btn-transparent btn-md">English</a>{% endif %}
-      {% if (locale != "fr") %}<a href="/t/fr?r={{active_view}}" class="btn btn-transparent btn-md">Français</a>{% endif %}
-    </span>
-
-    <a class="btn btn-md btn-dark btn-round" href="/login">[[__("login")]]</a>
-    <a class="btn btn-md btn-blue btn-round" href="/signup">[[__("signup")]]</a>
+    <a v-if="active_view != 'login'" class="btn btn-md btn-dark btn-round" href="/login">[[__("login")]]</a>
+    <a v-if="active_view != 'signup'" class="btn btn-md btn-dark btn-round" href="/signup">[[__("signup")]]</a>
   </div>
 </header>
 
@@ -23,7 +17,7 @@
   <div id="login" v-bind:class="{active : active_view == 'login'}">
     <div class="content">
       <form v-on:submit="login_submit(user_forms_email, login_password, $event)">
-        <h4>[[__("login")]]</h4>
+        <h3>Login</h3>
 
         <div class="tight">
           <div class="form-group">
@@ -34,16 +28,15 @@
           </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-block">
+        <button type="submit" class="btn btn-dark btn-block">
           <span v-show="!loading_user">[[__("login")]]</span>
           <span v-show="loading_user">[[__("logging_in")]]</span>
         </button>
 
         <div class="center alert alert-danger" v-if="login_error">{{login_error}}</div>
 
-        <div class="pull-right">
-          <a class="btn btn-xs btn-darken" href="/signup">[[__("signup")]]</a>&nbsp;
-          <a class="btn btn-xs btn-darken" href="/password-reset">[[__("reset_password")]]</a>
+        <div style="margin-top:2em">
+          <a href="/password-reset">Forgot Password</a>
         </div>
       </form>
     </div>
@@ -51,7 +44,7 @@
 
   <div id="signup" v-bind:class="{active : active_view == 'signup'}">
     <div class="content">
-      <form v-on:submit="signup_submit($event, user_forms_name, user_forms_email, signup_password, signup_password_confirmation)">
+      <form v-on:submit="signup_submit($event, user_forms_name, user_forms_email, signup_password, signup_password_confirmation, signup_invite_code)">
         <h4>[[__("signup")]]</h4>
 
         <div class="tight">
@@ -75,19 +68,22 @@
           <div class="form-group">
             <input class="input" id="user-password-confirmation" required type="password" v-model="signup_password_confirmation" placeholder="[[__("password_confirmation")]]">
           </div>
+          
+          <div class="form-group">
+            <input class="input" id="invite-code" required type="text" v-model="signup_invite_code" placeholder="Invite Code">
+          </div>
         </div>
 
-        <div style="margin-top: -7px; margin-bottom: 7px;"><small>By signing up you agree to our <a href="/terms" target="_blank">TOS</a> and <a href="/privacy" target="_blank">Privacy Policy.</a></small><br/>
-       </div>
+        <!--div style="margin-top: -7px; margin-bottom: 7px;"><small>By signing up you agree to our <a href="/terms" target="_blank">TOS</a> and <a href="/privacy" target="_blank">Privacy Policy.</a></small><br/>
+       </div-->
 
-        <button class="btn btn-primary btn-block">
+        <button class="btn btn-dark btn-block">
           <span v-if="!creating_user">[[__("signup")]]</span>
           <span v-if="creating_user">[[__("signing_up")]]</span>
         </button>
 
         <div class="center alert alert-danger" style="width:100%;" v-if="signup_error">{{signup_error}}</div>
 
-        <a class="btn btn-link btn-block" href="/login" style="margin-top: 20px">[[__("login")]]</a>
       </form>
     </div>
   </div>
@@ -102,7 +98,7 @@
           </div>
         </div>
         <div class="text-center alert alert-danger" v-if="password_reset_error">{{password_reset_error}}</div>
-        <button class="btn btn-primary btn-block" v-on:click="password_reset_submit($event, reset_email)">[[__("reset_password")]]</button>
+        <button class="btn btn-dark btn-block" v-on:click="password_reset_submit($event, reset_email)">[[__("reset_password")]]</button>
       </form>
     </div>
     <div class="content" v-if="password_reset_send==true">
@@ -127,7 +123,7 @@
         </div>
 
         <div class="text-center alert alert-danger" v-if="password_reset_confirm_error">{{password_reset_confirm_error}}</div>
-        <button class="btn btn-primary btn-block" v-on:click="password_reset_confirm($event, signup_password, signup_password_confirmation)">[[__("save")]]</button>
+        <button class="btn btn-dark btn-block" v-on:click="password_reset_confirm($event, signup_password, signup_password_confirmation)">[[__("save")]]</button>
       </form>
     </div>
   </div>
