--- a/views/partials/tool/layout.html
+++ b/views/partials/tool/layout.html
@@ -1,6 +1,6 @@
 <div id="layout" class="relative">
-  <div class="dialog-section no-p-b">
-    <div class="">
+  <div class="dialog-section">
+    <div class="btn-group">
       <button class="btn btn-transparent btn-icon" v-on:click="layout_stack_top()">
         <span class="icon icon-stack-3d-top"></span>
       </button>
@@ -20,7 +20,7 @@
         <span class="icon icon-align-bottom"></span>
       </button>
     </div>
-    <div class="">
+    <div class="btn-group">
       <button class="btn btn-transparent btn-icon" v-on:click="layout_align_center()">
         <span class="icon icon-align-center-horizontal"></span>
       </button>
