--- a/views/partials/tool/zones.html
+++ b/views/partials/tool/zones.html
@@ -2,11 +2,11 @@
 
 <div id="zones" style="max-height:500px;overflow-y:scroll">
   <div class="dialog-section">
-    <p v-if="zones.length<2">
+    <!--p v-if="zones.length<2">
       Turn your Space into a zooming presentation by placing some Zones and switch through them when presenting.
-    </p>
+    </p-->
     
-    <button v-on:click="add_zone()" class="btn btn-sm btn-primary">[[__("add_zone")]]</button>
+    <button v-on:click="add_zone()" class="btn btn-sm btn-dark">[[__("add_zone")]]</button>
   </div>
 
   <div class="dialog-section no-p" v-for="z in zones | orderBy 'order'" style="white-space: nowrap;text-align:left;cursor:pointer" v-on:click="zoom_to_zone(z)">
