--- a/styles/type.scss
+++ b/styles/type.scss
@@ -1,6 +1,8 @@
 @import "vars";
 @import "mixins";
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;900&display=swap');
+
 body {
   background-color: $light;
   color: $medium;
@@ -25,7 +27,7 @@ hr {
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   color: inherit;
   font-family: inherit;
-  font-weight: 500;
+  font-weight: 900;
   line-height: 1.3;
   margin-top: 0px;
   margin-bottom: 1em;
@@ -46,8 +48,7 @@ strong {font-weight: 500; }
 small {font-size: 75%; }
 
 a {
-  text-decoration: none;
-  color: $medium;
+  color: black;
 }
 
 dl {
