landing: add screenshot

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,7 @@
       Spacedeck can help you.
     </p>
     <p>
-      Spacedeck is the right tool for you if you want to quickly put together a collage of your
-      idea or concept, either for yourself or to share it with teammembers, clients or students.
+      Spacedeck is a browser based application. It is the right tool for you if you want to quickly put together a collage of your idea or concept, either for yourself or to share it with teammembers, clients or students. Changes are updated in realtime.
     </p>
     <p>
       Spacedeck is not meant for creating polished designs, but it is a good fit for:
@@ -25,6 +24,7 @@
       <li>Shared Whiteboards</li>
       <li>Design Thinking</li>
     </ul>
+    <img src="/images/sd6-screenshot.png" alt="Screenshot of Spacedeck 6.0">
     <p>
       The hosted version of Spacedeck 6.0 is currently in beta and invite only. You can also self-host and <a href="https://github.com/spacedeck/spacedeck-open">participate in the open source development</a>.
     </p>
